A revision in the evdev code around late 2011 or early 2012 broke horizontal scrolling with certain types of mice such as Microsoft Wireless Laser Mouse 5000. Instead of firing button events 6 and 7, wheel tilt incorrectly fires events 4 and 5. The problem was reported in Launchpad Bug #926917: https://bugs.launchpad.net/ubuntu/+source/xserver-xorg-input-evdev/+bug/926917/ The source of the problem was later identified and a patch to evdev.c was suggested in post #16. Further Launchpad bug report was filed recently with detailed information on hardware: https://bugs.launchpad.net/ubuntu/+source/xserver-xorg-input-evdev/+bug/1260513 The Ubuntu team has suggested that this bug is reported here so that the problem can be fixed upstream in the evdev module. Hence here is the bug report. I should note that this problem is not the same as the one reported in Bug ID 36556 here.
Please attach the output from evtest when tilting the wheel. Does it really send REL_DIAL? If so, that seems incorrect.
Because I just ran into this bug in http://bugzilla.redhat.com/869065: this was triggered by the switch to smooth scrolling. The old scrolling code uses REL_DIAL as horiz wheel, the smooth scrolling code added it as vertical wheel
commit 16c85cbeacb721ed365c6240aabaad921b811fe0 Author: Peter Hutterer <peter.hutterer@who-t.net> Date: Mon Apr 28 12:23:18 2014 +1000 Map REL_DIAL to horizontal scrolling (#73105)
Correction, I forgot a hunk there, commit is 41cf9212d02c1d2adca0e85702a1f0faba9e6b37
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.