Map REL_DIAL to horizontal scrolling (#73105)

This was the original behavior introduced in
f77410e1f97d394e98c854fd174f712666b0544c and stayed that way until smooth
scrolling erroneously added it as vertical axis in
b450efdf95999cad08de23ce069f04a66bdae24b. Revert to horizontal scrolling to
restore the previous behaviour - which unbreaks scrolling on Microsoft mice.

This effectively reverts 54a3120e339e55fc4721543abb15692c3e9ede09 too.

X.Org Bug 73105 <http://bugs.freedesktop.org/show_bug.cgi?id=73105>

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>
Reviewed-by: Hans de Goede <hdegoede@redhat.com>
(cherry picked from commit 16c85cbeacb721ed365c6240aabaad921b811fe0)

Conflicts:
	src/evdev.c